# Lux

./: .gitignore  eslint.config.ts  package.json  turbo.json
apps/desktop/: eslint.config.ts  index.html  package.json  tsconfig.json  vite.config.ts  vite.plugins.ts  vite.tauri.ts
apps/desktop/src/: App.vue  entry.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/boot/: layer_shell.rs  logger.rs  mod.rs  tray.rs
apps/desktop/src-tauri/src/commands/: utils.rs
apps/desktop/src-tauri/src/utils/: log.rs
apps/desktop/src/components/: BorderedContainer.vue  FluidContainer.vue
apps/desktop/src/styles/: index.css
