[package]
name = "lux"
version = "0.0.0"
description = "Lux application launcher"
authors = ["Schwester"]
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["devtools", "tray-icon"] }
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-fs = "2"
gtk = "0.18.2"
gtk-layer-shell = { version = "0.8.2", features = ["v0_6"] }
chrono = "0.4.41"
specta = "2.0.0-rc.21"
specta-typescript = "0.0.9"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-single-instance = "2"
